--- a/templates/base2.html
+++ b/templates/base2.html
@@ -129,7 +129,7 @@ $('.btnBack').click(function(event) {
 		aside$.removeClass('open');
 });
 </script>
-<script src="../static/scripts/jquery.touchSwipe.min.js"></script>
+<script src="/scripts/jquery.touchSwipe.min.js"></script>
 <script>
 jQuery(document).ready(function(){
 
