--- a/templates/reglas2.html
+++ b/templates/reglas2.html
@@ -39,11 +39,13 @@ actúa de buena fe.</li>
             <li>Segundo: 80 puntos.</li>
             <li>Tercero: 70 puntos.</li>
             <li>Cuarto: 60 puntos.</li>
-            <li>Goleador 1: 100 puntos.</li>
-            <li>Goleador 2: 70 puntos.</li>
-            <li>Goleador Argentina: 50 puntos.</li>
-            <li>Posición Argentina: 100 puntos.</li>
+            <li>Goleador del mundial opción 1: 100 puntos.</li>
+            <li>Goleador del mundial opción 2: 70 puntos.</li>
             <li>Mejor jugador: 100 puntos.</li>
+            <li>Guante de oro: 100 puntos.</li>
+            <li>Fair play: 50 puntos.</li>
+            <li>Goleador Argentina: 100 puntos.</li>
+            <li>Posición Argentina: 100 puntos.</li>
         </ul>
         En el caso de goleador op. 1 y goleador op. 2 se busca acertar quién será el goleador del campeonato dando 2 opciones. Por ejemplo, si en goleador op. 1 elijo a Kempes y en goleador op. 2 a Luque, si sale goleador Kempes ganaré 100 puntos, mientras que si el goleador es Luque, sólo 70 puntos. Si otra persona es goleador, no sumaré puntos.
         </li>
