--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block body_content%}
 <h2>Registro</h2>
-<p>
+<p class="bajada">
 Crea tu usuario con tu nombre y apellido (sin espacios) para una fácil identificación.
 </p>
 
