--- a/static/stylesheets/estudioindex.css
+++ b/static/stylesheets/estudioindex.css
@@ -577,7 +577,38 @@ section#extras article .content span{
     color: #FFF !important;
     font-size: 30px !important;
 }
-
+.score.row .col-sm {
+    font-size: 12px;
+    color: #FFF;
+}
+.score.row .col-sm span {
+    color: #bcb187;
+    font-size: 50px;
+    display: block;
+    line-height: 100%;
+}
+.score.row {
+    padding: 20px;
+}
+.mensajes {
+    color: #bcb187;
+    font-size: 20px;
+    display: block;
+    line-height: 100%;
+}
+.bajada {
+    font-size: 14px;
+    color: #bcb187;
+    padding: 10px 30px;
+    box-sizing: border-box;
+}
+.text-left.row.reglas {
+    text-align: left!important;
+    color: #FFF;
+    font-size: 1.3em;
+    line-height: 160%;
+    font-weight: 100;
+}
 /*-----------------------------*/
 @media screen and (max-width: 800px){
 .rowTop, aside#sidemenu {
@@ -1028,7 +1059,7 @@ color:#FFF;
 }
 form.text-left {
     width: 80%;
-    padding-top: 50px;
+    padding-top: 70px;
 }
 form .col-sm-7 {
     -ms-flex: 1;
@@ -1038,6 +1069,11 @@ form .col-sm-7 {
 
 form .col-form-label {
     text-align: left;
+}
+.selector-rondas.rondasUsers ul.nav.nav-tabs {
+    display: -ms-flex;
+    display: flex;
+    justify-content: center;
 }
 
 }
